# django-app

./: .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt
misite/blogapp/: admin.py  models.py  urls.py  views.py
misite/blogapp/migrations/: 0001_initial.py
misite/blogapp/templates/blogapp/: article_list.html  base.html
misite/locale/en/LC_MESSAGES/: django.po
misite/locale/ru/LC_MESSAGES/: django.po
misite/misite/: settings.py  urls.py
misite/myauth/: models.py  urls.py  views.py
misite/myauth/fixtures/: fixtures_users.json
misite/myauth/migrations/: 0001_initial.py  0002_profile_avatar.py  0003_alter_profile_age.py
misite/myauth/templates/myauth/: about_me.html  base.html  login.html  profile_form.html  register.html  user_list.html
misite/rare_loading_file/: apps.py  middleware.py  urls.py  views.py
misite/rare_loading_file/templates/rare_loading_file/: base.html  loading_file.html
misite/shopapp/: admin.py  forms.py  models.py  serializers.py  sitemap.py  tests.py  urls.py  views.py
misite/shopapp/fixtures/: fixtures_orders.json  fixtures_products.json
misite/shopapp/management/commands/: create_order.py  create_product.py  update_order.py
misite/shopapp/migrations/: 0001_initial.py  0002_product_is_archive.py  0003_order.py  0004_order_user.py  0005_order_products.py  0006_alter_order_user.py  0007_product_created_by_alter_order_comment_and_more.py  0008_order_promocode.py  0009_alter_order_options_alter_product_options_and_more.py
misite/shopapp/templates/shopapp/: base.html  create_order.html  urls_list.html  (+12 more)
